# QDbusFreedesktopProperty

./: CMakeLists.txt  QDbusFreedesktopProperty.qbs
